--- a/webapp.html
+++ b/webapp.html
@@ -56,101 +56,95 @@
 <div id="chat">Загрузка…</div>
 
 <script>
-const chatEl = document.getElementById("chat");
+(function () {
+  const chatEl = document.getElementById("chat");
 
-// 1️⃣ Проверяем Telegram WebApp
-const tg = window.Telegram?.WebApp;
-if (!tg) {
-  chatEl.innerHTML = "❌ Откройте через Telegram";
-  console.warn("Telegram WebApp not found");
-  return;
-}
+  const tg = window.Telegram?.WebApp;
+  if (!tg) {
+    chatEl.innerHTML = "❌ Откройте через Telegram";
+    return;
+  }
 
-tg.expand();
+  tg.ready();
+  tg.expand();
 
-// 2️⃣ Разбираем параметры
-const params = new URLSearchParams(window.location.search);
-const mode = params.get("mode");
-const chatId = params.get("chat_id");
+  const params = new URLSearchParams(window.location.search);
+  const mode = params.get("mode");
+  const chatId = params.get("chat_id");
 
-// 3️⃣ Безопасно берём userId
-const userId = tg.initDataUnsafe?.user?.id;
-if (!userId) {
-  chatEl.innerHTML = "❌ Нет данных пользователя";
-  console.warn("No user data");
-  return;
-}
+  const userId = tg.initDataUnsafe?.user?.id;
+  if (!userId) {
+    chatEl.innerHTML = "❌ Нет данных пользователя";
+    return;
+  }
 
-// 4️⃣ MODE: COPY
-if (mode === "copy") {
-  chatEl.innerHTML = `
-    <div style="text-align:center;padding:40px;font-size:28px">
-      📋 Нажмите кнопку в боте, чтобы скопировать данные
-    </div>
-  `;
-  return;
-}
+  if (mode === "copy") {
+    chatEl.innerHTML = `
+      <div style="text-align:center;padding:40px;font-size:28px">
+        📋 Нажмите кнопку в боте, чтобы скопировать данные
+      </div>
+    `;
+    return;
+  }
 
-// 5️⃣ MODE: RESTORE
-if (mode !== "restore") {
-  chatEl.innerHTML = "⚠️ Неизвестный режим";
-  return;
-}
+  if (mode !== "restore") {
+    chatEl.innerHTML = "⚠️ Неизвестный режим";
+    return;
+  }
 
-if (!chatId) {
-  chatEl.innerHTML = "❌ Нет chat_id";
-  return;
-}
+  if (!chatId) {
+    chatEl.innerHTML = "❌ Нет chat_id";
+    return;
+  }
 
-// 6️⃣ Загружаем чат
-fetch(`https://eyessee-webapp.onrender.com/api/chat?owner_id=${userId}&chat_id=${chatId}`)
-  .then(r => r.json())
-  .then(d => {
-    if (!d.ok) {
-      chatEl.innerHTML = "❌ Ошибка загрузки";
-      return;
-    }
-  
-    // 👇 ВАЖНО
-    if (!d.messages || d.messages.length === 0) {
-      chatEl.innerHTML = `
-        <div style="opacity:.6; font-size:22px; padding:20px;">
-          📭 В этом чате нет сохранённых сообщений
-        </div>
-      `;
-      return;
-    }
-  
-    chatEl.innerHTML = "";
-  
-    d.messages.forEach(m => {
-      const isMine = m.is_owner === true;
-  
-      let html = `
-        <div class="msg ${isMine ? "me" : "other"}">
-          <div class="name">${m.name || ""}</div>
-      `;
-  
-      if (m.type === "text") {
-        html += `<div>${m.text || ""}</div>`;
-      } else if (m.file_id) {
-        html += `
-          <a class="media" href="/api/file?file_id=${m.file_id}" target="_blank">
-            📎 ${m.type}
-          </a>
-        `;
-      } else {
-        html += `<div class="media">❌ файл недоступен</div>`;
+  fetch(`https://eyessee-webapp.onrender.com/api/chat?owner_id=${userId}&chat_id=${chatId}`)
+    .then(r => r.json())
+    .then(d => {
+      if (!d.ok) {
+        chatEl.innerHTML = "❌ Ошибка загрузки";
+        return;
       }
-  
-      html += `<div class="time">${new Date(m.time).toLocaleString()}</div></div>`;
-      chatEl.insertAdjacentHTML("beforeend", html);
+
+      if (!d.messages || d.messages.length === 0) {
+        chatEl.innerHTML = `
+          <div style="opacity:.6; font-size:22px; padding:20px;">
+            📭 В этом чате нет сохранённых сообщений
+          </div>
+        `;
+        return;
+      }
+
+      chatEl.innerHTML = "";
+
+      d.messages.forEach(m => {
+        const isMine = m.is_owner === true;
+
+        let html = `
+          <div class="msg ${isMine ? "me" : "other"}">
+            <div class="name">${m.name || ""}</div>
+        `;
+
+        if (m.type === "text") {
+          html += `<div>${m.text || ""}</div>`;
+        } else if (m.file_id) {
+          html += `
+            <a class="media" href="/api/file?file_id=${m.file_id}" target="_blank">
+              📎 ${m.type}
+            </a>
+          `;
+        } else {
+          html += `<div class="media">❌ файл недоступен</div>`;
+        }
+
+        html += `<div class="time">${new Date(m.time).toLocaleString()}</div></div>`;
+        chatEl.insertAdjacentHTML("beforeend", html);
+      });
+    })
+    .catch(err => {
+      chatEl.innerHTML = "❌ JS ошибка";
+      console.error(err);
     });
-  })
-  .catch(err => {
-    chatEl.innerHTML = "❌ JS ошибка";
-    console.error(err);
-  });
+})();
 </script>
 </body>
 </html>
